// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeCard: reducer COINBASE store 1`] = `
Object {
  "coinbase": Object {
    "coinbase": "82069cc441c42b2706fa5d3129deeb677812e5a5",
  },
  "name": "LOCALHOST",
  "peers": Object {},
}
`;

exports[`NodeCard: reducer COINBASE update 1`] = `
Object {
  "coinbase": Object {
    "coinbase": null,
  },
  "name": "LOCALHOST",
  "peers": Object {},
}
`;

exports[`NodeCard: reducer PEERS store 1`] = `
Object {
  "coinbase": "",
  "name": "LOCALHOST",
  "peers": Object {},
}
`;

exports[`NodeCard: reducer PEERS update 1`] = `
Object {
  "coinbase": "",
  "name": "LOCALHOST",
  "peers": Object {
    "192.168.10.33": Object {
      "pubkey": "687294782948972018571047ra9asd8f97381asdfasd",
      "tcp_port": "30303",
    },
    "192.168.10.36": Object {
      "pubkey": "687294782948972018571047ra9asd8f97381asdfasd",
      "tcp_port": "30303",
    },
  },
}
`;

exports[`NodeCard: reducer should set initial state 1`] = `
Object {
  "coinbase": "",
  "name": "LOCALHOST",
  "peers": Object {},
}
`;
